test_regress/t/t_param_circ_bad.out
%Error: t/t_param_circ_bad.v:11:24: Variable's initial value is circular: 'WIDTH'
                                  : ... note: In instance 't.sub'
   11 | module sub #(parameter WIDTH=X, parameter X=WIDTH)
      |                        ^~~~~
%Error: Exiting due to
